<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.SigninActivity">

    <TextView
        android:id="@+id/signin_tv_pennector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="57dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/signin_rectangle_round_10"
        android:backgroundTint="@color/main_color"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/pennector"
        android:theme="@style/R24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signin_edt_classof"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="67dp"
        android:background="@drawable/signin_rectangle_round_10"
        android:hint="@string/iniput_classOf"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:theme="@style/R24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_tv_pennector" />

    <EditText
        android:id="@+id/signin_edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/signin_rectangle_round_10"
        android:hint="@string/input_passWord"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:theme="@style/R24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_edt_classof" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/signin_rectangle_round_10"
        android:backgroundTint="@color/purple_AAC3f0"
        android:text="@string/login"
        android:theme="@style/R24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_edt_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gotoSignUP"
        android:textColor="@color/grey_7E7474"
        android:theme="@style/R20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>